--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -34,6 +34,7 @@ header {
 			color: $awhite;
 			font-size: 40px;
 			font-size: 2.5rem;
+			font-weight: normal;
 			font-family: 'Francois One', sans-serif;
 			&:hover {
 				color: $bluedust;
@@ -77,7 +78,6 @@ section.main {
 			.entry-content {
 				position: relative;
 				width: 86.1111111%; /* 620px; */
-				border-bottom: 1px dashed #555;
 				padding-bottom: 1.25em; /* 30px*/
 				padding-right: 1.875em;
 				h2.post-title {
@@ -85,7 +85,10 @@ section.main {
 					padding-bottom: 0.3125em;
 					a {
 						color: $nied;
-						// font-family: 'Francois One', sans-serif;
+						font-weight: normal;
+						font-size: 35px;
+						font-size: 2.1875rem;
+						font-family: 'Francois One', sans-serif;
 						&:hover {
 							color: $bluedust;
 						}
@@ -98,15 +101,17 @@ section.main {
 			.cat-tags {
 				position: relative;
 				top: 1.25em;
-				padding-bottom: 1.25em;
 				width: 86.1111111%;
-				float: right;
+				padding-bottom: 1.25em;
+				padding-top: 1.25em;
 				padding-right: 1.875em;
+				border-top: 1px dashed #ccc;
+				float: right;
 				font-size: 11px;
 				font-size: 0.6875rem;
+				font-weight: bold;
 				line-height: 2;
 				color: #555;
-				font-weight: bold;
 				a {
 					color: $bluedust;
 					&:hover {
@@ -128,9 +133,9 @@ section.main {
 				color: $awhite;
 				.data {
 					background-color: $livedie;
-					height: 80px;
-					font-size: 40px;
-					font-size: 2.5rem;
+					height: 70px;
+					font-size: 30px;
+					font-size: 1.875rem;
 					border-radius: 2px;
 					-moz-box-shadow: 2px -2px rgba(0,0,0,0.3);
 					-webkit-box-shadow: 2px -2px rgba(0,0,0,0.3);
